--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -16,8 +16,8 @@
 }
 
 .intro-left-wrapper {
-  padding: 50px;
-  height: 50%;
+  padding: 30px 50px 50px 50px;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -28,16 +28,22 @@
   font-weight: 300;
 }
 .intro-name {
-  font-size: 60px;
+  font-size: 80px;
+  font-family: "GillSansMTBold";
+  font-weight: "bold";
+  letter-spacing: 20px;
+  margin-top: 0;
+  margin-bottom: -20px;
 }
 
 .intro-title {
-  height: 50px;
+  margin-top: 0;
+  height: 60px;
   overflow: hidden;
 }
 
 .intro-title-wrapper {
-  height: 100%;
+  height: 120%;
   animation: move 10s ease-in-out infinite alternate;
 }
 
@@ -58,10 +64,19 @@
 .intro-title-item {
   height: 50px;
   font-size: 30px;
+  font-family: "poppins";
   font-weight: bold;
-  color: #59b256;
+  letter-spacing: 5px;
+  color: #5b1d93;
   display: flex;
   align-items: center;
+  text-transform: uppercase;
+}
+
+.intro-desc {
+  text-align: justify;
+  font-size: 20px;
+  letter-spacing: 0.75px;
 }
 
 .intro-scroll {
@@ -79,8 +94,8 @@
 }
 
 .intro-bg {
-  clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-  background-color: #59b256;
+  /* clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+  background-color: #59b256; */
   width: 100%;
   height: 100%;
   position: absolute;
