--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -16,7 +16,7 @@
 }
 
 .intro-left-wrapper {
-  padding: 30px 50px 50px 50px;
+  padding: 80px 50px 50px 50px;
   height: 70%;
   display: flex;
   flex-direction: column;
@@ -28,11 +28,11 @@
   font-weight: 300;
 }
 .intro-name {
-  font-size: 80px;
+  font-size: 70px;
   font-family: "GillSansMTBold";
   font-weight: "bold";
   letter-spacing: 20px;
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: -20px;
 }
 
@@ -77,6 +77,7 @@
   text-align: justify;
   font-size: 20px;
   letter-spacing: 0.75px;
+  margin-bottom: 30px;
 }
 
 .intro-scroll {
